--- a/index.html
+++ b/index.html
@@ -8,21 +8,15 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
 
-    <title>Lion School</title>
+    <title>Evellyn's Store</title>
 </head>
 
 <body>
     <header class="menu">
-
-        <div class="carregar_todo_header">
-            <div class="logo">
-                <img src="./img/logo (2).png" alt="logo">
-            </div>
-            <div class="sair">
-                <img src="./img/sair.png" alt="voltar para janela anterior">
-            </div>
-        </div>
-
+                <img class="logo" src="./img/dia-mundial-do-livro 1.png" alt="logo">
+            
+            <h1 class="title">EVELLYN'S STORE</h1>
+            
     </header>
 </body>
 
