--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/card.css">
     <script src="./js/index.js" defer type="module"></script>
+    <link rel="icon" href="/img/livro.png">
     <title>Evellyn's Store</title>
 </head>
 
