--- a/Livro.html
+++ b/Livro.html
@@ -1,39 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/telaLivro.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/livro-detalhado.js" type="module"></script>
     <title>Livro</title>
 </head>
-
 <body>
-    <header class="menu">
-        <img class="logo" src="./img/dia-mundial-do-livro 1.png" alt="logo">
-        <h1 class="title">EVELLYN'S STORE</h1>
-        <nav>
-            <a href="#" class="container-barra">
-                <i class="menu-barra"></i>
-            </a>
-            <ul class="menu_a">
-                <li>
-                    <a href="#HOME">HOME</a>
-                </li>
-
-            </ul>
-        </nav>
-    </header>
+    <header></header>
     <main>
-        <h2>Learn Enough JavaScript to Be Dangerous </h2>
-        
+        <div class="container"></div>
     </main>
-    <script src="/js/sobrelivro.js">
-
-        <footer>
-            <p>Copyright ©️ | Todos os Direitos Reservados | Evellyn da Silva</p>
-        </footer>
-</body >
-</html >
+    <footer></footer>
+</body>
+</html>
